.provarCaches/00D410000011HE0EAM/objects/rstkf__glfinstmt5__c.object
<CustomObject>
    <description>glfinstmt5__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfinstmt5_glfinstmt1__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  rstkf__glfinstmt5_valuekey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt5_glfinstmt1__c</fullName>
        <label>Financial Statement Data - Top Level</label>
        <referenceTo>rstkf__glfinstmt1__c</referenceTo>
        <relationshipName>glfinstmt5s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt5_valuekey__c</fullName>
        <label>Value Key</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>Financial Report Data - Totals</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Report Data - Totals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>